# getm_ersem_bfm_v2

./: .gitignore  model_base_setup.sh  model_base_setup_v2.sh
BFM_SOURCES/: bfm-git
BFM_SOURCES/bfm_2016/src/BFM/Bennut/: BenSilica.F90  CalculateFromLayer.F90  CalculateFromSet.f90
BFM_SOURCES/bfm_2016/src/BFM/CO2/: ModuleCO2.f90
BFM_SOURCES/bfm_2016/src/BFM/General/: CalcRiverConcentration.F90
BFM_SOURCES/bfm_2016/src/BFM/PelB/: PelGlobal.F90
BFM_SOURCES/bfm_2016/src/getm/: coupling_getm_bfm.F90  read_restart_bio_ncdf.F90  read_restart_ncdf.F90
GETM_ERSEM_SETUPS/Container/: getm_configure.sh  getm_configure_v2.sh
GETM_ERSEM_SETUPS/nwes/: BenAlkalinity.nml  BenAmmonium.nml  BenAnoxic.nml  BenNitrate.nml  BenPhosphate.nml  BenQ1Transport.nml  CO2.nml  D2MacroPhyto.nml  MacroPhyto.nml  Param.nml  Silt.nml  add_constant_river_carbonate_vars.sh  atmdep.nml  bio.nml  bio_bfm.nml  bio_bfm_2d_output.nml  bio_bfm_basic_output.nml  bio_bfm_daily_ave_CB.nml  bio_bfm_openboundary_output.nml  bio_bfm_validation.nml  bio_bfm_validation_withfluxes.nml  co2_data_find.sh  compile_all_git  getm_bio.inp.init  gotmturb.nml  gotmturb_keep.nml  north_west_european_shelf.xml  output_daily_means.yaml  pre_run_check.README.md  pre_run_check.sh  run.getm  run.getm.v2_validation  run_all_atmdep_co2_opt_alk  run_all_v2_2014_2015_alk_validation
GETM_ERSEM_SETUPS/nwes/Configurations/20x16/: north_west_european_shelf.dim  ns_noos_nwes.mask.size0020x0016_offset+0000x-0001_nodes008.machine_file  ns_noos_nwes.mask.size0020x0016_offset+0000x-0001_nodes008.subdomain_spec.lst
GETM_ERSEM_SETUPS/nwes/co2_input/: pre_process_co2
GETM_SOURCES/getm_coupled_bfm_2016/: .gitignore  readme_branches
GETM_SOURCES/getm_coupled_bfm_2016/doc/: getm_pub.bib
GETM_SOURCES/getm_coupled_bfm_2016/include/: cppdefs.h
GETM_SOURCES/getm_coupled_bfm_2016/schemas/: getm-2.5.defaults  getm-2.5.schema
GETM_SOURCES/getm_coupled_bfm_2016/src/: CMakeLists.txt  Makefile  Rules.make
GETM_SOURCES/getm_coupled_bfm_2016/src/2d/: Makefile  adv_arakawa_j7_2dh.F90  adv_fct_2dh.F90  adv_split_u.F90  adv_split_v.F90  adv_upstream_2dh.F90  advection.F90  bdy_2d.F90  bottom_friction.F90  depth_update.F90  dryfac_update.F90  dynamic_allocations_2d.h  dynamic_declarations_2d.h  interface_velocities.F90  m2d.F90  momentum.F90  physical_dissipation.F90  sealevel.F90  static_2d.h  uv_advect.F90  uv_diff_2dh.F90  uv_diffusion.F90  variables_2d.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/3d/: Makefile  adv_split_w.F90  advection_3d.F90  bdy_3d.F90  deformation_rates_3d.F90  dynamic_allocations_3d.h  dynamic_declarations_3d.h  getm_bio.F90  getm_fabm.F90  gotm.F90  interface_velocities_3d.F90  m3d.F90  momentum_3d.F90  nonhydrostatic.F90  physical_dissipation_3d.F90  physical_mixing.F90  rivers.F90  salinity.F90  shear_frequency.F90  sigma_coordinates.F90  start_macro.F90  static_3d.h  stop_macro.F90  stresses_3d.F90  temperature.F90  tracer_diffusion.F90  uv_advect_3d.F90  uv_diffusion_3d.F90  variables_3d.F90  velocity_update_3d.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/cmake/Modules/: FindFABM.cmake
GETM_SOURCES/getm_coupled_bfm_2016/src/coupling/: getm_esmf.F90  getm_oasis.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/domain/: bdy_spec.F90  domain.F90  have_bdy.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/futils/: Makefile  cnv_2d.F90  cnv_3d.F90  getm_config.F90  getm_timers.F90  halo_mpi.F90  halo_zones.F90  time.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/getm/: compilation_options.F90  initialise.F90  integration.F90  register_all_variables.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/input/: Makefile  atmdep_input.F90  atmdep_state.F90  get_ssts_data.F90  init_ssts_input.F90  input.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/meteo/: Makefile  exchange_coefficients.F90  exchcoeffs_kara.F90  fluxes.F90  meteo.F90  short_wave_radiation.F90  t10m.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/ncdf/: Makefile  create_restart_ncdf.F90  init_2d_ncdf.F90  init_3d_ncdf.F90  init_grid_ncdf.F90  init_mean_ncdf.F90  ncdf_2d.F90  ncdf_2d_bdy.F90  ncdf_3d.F90  ncdf_3d_bdy.F90  ncdf_atmdep.F90  ncdf_mean.F90  ncdf_meteo.F90  ncdf_restart.F90  ncdf_rivers.F90  ncdf_ssts.F90  ncdf_topo.F90  ncdf_waves.F90  open_restart_ncdf.F90  read_restart_ncdf.F90  save_2d_ncdf.F90  save_3d_ncdf.F90  save_mean_ncdf.F90  write_restart_ncdf.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/output/: calc_mean_fields.F90  diagnostic_variables.F90  output.F90  output_processing.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/pool/: deformation_rates.F90  pool.F90
GETM_SOURCES/getm_coupled_bfm_2016/src/waves/: bottom_friction_waves.F90  vortex_force.F90  vortex_force_3d.F90  waves.F90
GOTM_SOURCES/gotm_coupled_bfm_2016/: CMakeLists.txt  tags
GOTM_SOURCES/gotm_coupled_bfm_2016/src/: CMakeLists.txt
GOTM_SOURCES/gotm_coupled_bfm_2016/src/airsea/: airsea.F90
GOTM_SOURCES/gotm_coupled_bfm_2016/src/gotm/: gotm.F90
GOTM_SOURCES/gotm_coupled_bfm_2016/src/meanflow/: meanflow.F90
GOTM_SOURCES/gotm_coupled_bfm_2016/src/observations/: observations.F90
model_out/: README.md
